0.36	- 09 Apr 2014, H.Merijn Brand
    - Fix locales for non-utf8 (and windows)
    - Upped Copyright to 2014
    - Make sure boolean attributes are 0 or 1

0.35	- 20 Aug 2013, H.Merijn Brand
    * Indented SYNOPSIS (RT#85697 - Djibril Ousmanou)
    * Support for locales in long day and month formats
    * Support for local offset (in seconds)

0.34	- 28 May 2013, H.Merijn Brand
    * Force update if time wound back (ntp, date command)
    * Upped Copyright to 2013
    * Forced order of config attributes (destroying attribs last)

0.33	- 17 Apr 2012, H.Merijn Brand
    * Upped Copyright to 2012
    * Better protect against CPANTESTERS with non-Tk environment

0.32	- 07 Sep 2011, H.Merijn Brand
    * NAME / DISTNAME in Makefile.PL

0.31	- 07 Sep 2011, H.Merijn Brand
    * More cross-checks for META data

0.30	- 12 May 2011, H.Merijn Brand
    * Initialization fix (attributes can be passed to constructor as it has
      always be intended)
    * Upped Copyright to 2011

0.29	- 02 Aug 2010, H.Merijn Brand
    * Spell-checking
    * Added useInfo, infoColor, infoFormat, and infoFont
    * timeFormat, dateFormat and infoFormat now all support all abbreviations
    * Added timerValue and corresponding Hc, Mc, and Sc format entries

0.28	- 16 Mar 2010, H.Merijn Brand
    * Allow to change backdrop while running
    * Upped Copyright to 2010
    * Dropped YAML spec to 1.0

0.27	- 18 May 2009, H.Merijn Brand
    * Enabled backdrop
    * Add useSecHand option
    * Overhauled the documentation

0.26	- 20 Mar 2009, H.Merijn Brand
    * replace ->_packMethod () with ->manager
    * t/30_dual.t now allows resizing in grid
    * examples/cdclock.pl now acts as I had in mind
    * Added Test::NoWarnings

0.25	- 08 Mar 2009, H.Merijn Brand
    * Vastly improved on resizing.
    * Prefer autoScale => 1 over anaScale => 0
    * Add examples/cdclock.pl (Lightning Talk countdown clock)

0.24	- 20 Jan 2009, H.Merijn Brand
    * Wrong e-mail in META.yml
    * Copyright 2009